# simple-notepad-project

./: CMakeLists.txt  Notepad.md  find_replace_dialog.cpp  find_replace_dialog.h  find_replace_dialog.ui  line_number_area.cpp  line_number_area.h  main.cpp  main_window.cpp  main_window.h  notepad_exception.h  sort.cpp  sort.h  spell_checker.cpp  spell_checker.h  text_transform.cpp  text_transform.h  word_frequency_dialog.cpp  word_frequency_dialog.h  word_frequency_dialog.ui
